--- a/vultr/.tfvars.example
+++ b/vultr/.tfvars.example
@@ -1,8 +1,9 @@
-vultr_api_key = "123123123"
-vm_plan = "vc2-1c-1gb"
-vm_region = "sea"
-image_id = "localhost"
-vm_label = "testbed for terraform"
-vm_hostname = "testhost"
-ssh_key_name = "ssh-key-name"
-ssh_key_path = "/path/to/ssh_pub_key"
+vultr_api_key = ""
+vm_plan       = ""
+vm_region     = ""
+image_id      = ""
+snapshot_id   = ""
+vm_label      = "testbed for terraform"
+vm_hostname   = "testhost"
+ssh_key_name  = "ssh-key-name"
+ssh_key_path  = "/path/to/ssh_pub_key"
