--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,33 @@ override.tf.json
 .terraformrc
 terraform.rc
 terraform
+
+# sometimes it's best to ignore outdated or invalid plan files
+*.tfplan
+
+
+
+####################################################
+#####     Packer-specific
+####################################################
+
+# Cache objects
+packer_cache/
+
+# Crash log
+crash.log
+
+# https://www.packer.io/guides/hcl/variables
+# Exclude all .pkrvars.hcl files, which are likely to contain sensitive data,
+# such as password, private keys, and other secrets. These should not be part of
+# version control as they are data points which are potentially sensitive and
+# subject to change depending on the environment.
+#
+*.pkrvars.hcl
+
+# For built boxes
+*.box
+
+### Packer Patch ###
+# ignore temporary output files
+**/output-*/
