--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -15,6 +15,8 @@ jobs:
     - uses: actions/checkout@v4
       name: Checkout source code
 
+    - uses: hashicorp/setup-terraform@v3
+
     - uses: actions/cache@v4
       name: Cache plugin dir
       with:
