--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -29,6 +29,14 @@ jobs:
     - name: check format packer files
       run: packer fmt -check -recursive .
 
+    - name: validate terraform files
+      run: terraform validate
+
+    - name: validate packer files
+      run: |
+        cp ./vultr/packer/secret.pkrvars.hcl.example ./vultr/packer/secret.pkrvars.hcl && \
+        packer validate -var-file=secret.pkrvars.hcl ./vultr/packer/
+
     - uses: terraform-linters/setup-tflint@v4
       name: Setup TFLint
       with:
