--- a/vultr/packer/secret.pkrvars.hcl.example
+++ b/vultr/packer/secret.pkrvars.hcl.example
@@ -1,4 +1,4 @@
-api_key   = ""
-image_id  = ""
-region_id = ""
-plan_id   = ""
+api_key   = "test"
+image_id  = "test"
+region_id = "test"
+plan_id   = "test"
