--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,8 +1,11 @@
 name: Lint
 on:
   push:
-    branches: [ master ]
+    branches:
+      - main
   pull_request:
+    branches:
+      - main
 
 jobs:
   tflint:
@@ -12,16 +15,44 @@ jobs:
     - uses: actions/checkout@v4
       name: Checkout source code
 
+    - uses: hashicorp/setup-terraform@v3
+
+    - name: Cache packer
+      uses: actions/cache@v4
+      with:
+        path: |
+          ~/.config/packer/plugins/github.com/vultr/vultr
+        key: packer-${{ runner.os }}-${{ hashFiles('**/*_linux_amd64') }}
+        restore-keys: |
+          packer-${{ runner.os }}-
+
     - uses: actions/cache@v4
       name: Cache plugin dir
       with:
         path: ~/.tflint.d/plugins
         key: ${{ runner.os }}-tflint-${{ hashFiles('.tflint.hcl') }}
 
+    - name: check format terraform files
+      run: terraform fmt -check -recursive .
+
+    - name: check format packer files
+      run: packer fmt -check -recursive .
+
+    - name: validate terraform files
+      run: terraform validate
+
+    - name: validate packer files
+      run: |
+        cd ./vultr/packer/
+        packer init packer.pkr.hcl
+        cp secret.pkrvars.hcl.example secret.pkrvars.hcl
+        packer validate -var-file=secret.pkrvars.hcl .
+
     - uses: terraform-linters/setup-tflint@v4
       name: Setup TFLint
       with:
         tflint_version: latest
+
     - name: Show version
       run: tflint --version
 
