--- a/vultr/packer/secret.pkrvars.hcl.example
+++ b/vultr/packer/secret.pkrvars.hcl.example
@@ -1,4 +1,5 @@
-api_key   = "test"
-image_id  = "test"
-region_id = "test"
-plan_id   = "test"
+api_key      = "test"
+os_id        = 00000
+region_id    = "test"
+plan_id      = "test"
+ssh_key_path = "/path/to/.ssh/id_ed25519.pub"
